--- a/css/partials/_medias-queries.scss
+++ b/css/partials/_medias-queries.scss
@@ -42,6 +42,7 @@
     .grid {
         display: flex;
         flex-direction: column;
+        padding: 3rem;
     }
 
     .grid__item1 video {
@@ -86,6 +87,7 @@
     .grid {
         display: flex;
         flex-direction: column;
+        padding: 3rem;
     }
 
     .grid__item1 video {
@@ -122,6 +124,7 @@
     .grid {
         display: flex;
         flex-direction: column;
+        padding: 3rem;
     }
 
     .grid__item1 video {
