cambio en about

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -81,11 +81,10 @@ footer p {
 }
 
 .wrapper-local {
-  justify-content: center;
+  margin-left: 100px;
 }
 
 #img-mapa {
-  width: 100%;
   height: auto;
 }
 
