--- a/css/partials/_about.scss
+++ b/css/partials/_about.scss
@@ -8,10 +8,9 @@
 }
 
 .wrapper-local {
-    justify-content: center;
+    margin-left:100px;
 }
 
 #img-mapa {
-    width: 100%;
-    height: auto;
+    height: auto;    
 }
